# fdd-firmware-updater

./: .gitignore  README.md  launcher.py  pyproject.toml
.github/workflows/: release.yml
fdd_updater/: __init__.py  app.py  device_detector.py  firmware_catalog.py  service_manager.py  updater.py  utils.py
installer/: FDD_logo.icns  build_macos.sh  build_windows.ps1  build_windows_installer.ps1  fdd_updater.iss  fdd_updater.spec  fdd_updater_windows.spec
resources/firmware/: manifest.json
resources/firmware/hid/: G1000_HID.uf2  G1000_HID_CDC.uf2
resources/firmware/micropython/: button_handler.py  config.py  encoder_handler.py  fdd_g1000_1229251426.uf2  led_controller.py  main.py  mcp23017_handler.py  mode_manager.py  usb_comm.py
resources/tools/macos/: picotool
